--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <!--[if lt IE 7 ]> <html class="ie ie6"> <![endif]-->
 <!--[if IE 7 ]>    <html class="ie ie7"> <![endif]-->
@@ -212,8 +210,9 @@
                                         <div class="col-md-6 service-description">
                                             <h3>Graphic Design</h3>
                                             <hr />
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
+                                            <p>Lure the attention of visitors with eye-catching displays and graphics.</p>
+
+                                            <p>The Graphic Design Team at Raymi Labs will create masterful digital content for your blog or web project. From the modern to custom styles, Raymi Labs can create the look and feel that is right for you.</p>
                                         </div>
                                         <div class="col-md-6 services-image">
                                             <img src="img/index-photos/design.jpg" alt="" class="img-responsive" />
@@ -237,8 +236,8 @@
                                         <div class="col-md-6 service-description">
                                             <h3>Web Development</h3>
                                             <hr />
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
+                                            <p>Our team of dedicated professional web developers can help take your project's message to market through custom built websites and web applications.</p>
+                                            <p>Raymi Labs can work with your existing web project and web team; or, if you prefer, we can take over the project for you. We guarantee the value and quality of our work!</p>
                                         </div>
                                         <div class="col-md-6 services-image">
                                             <img src="img/index-photos/webdevelopment.jpg" alt="" class="img-responsive" />
@@ -250,8 +249,7 @@
                                         <div class="col-md-6 service-description">
                                             <h3>WordPress Development</h3>
                                             <hr />
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
+                                            <p>Let Raymi Labs help you with the development of your WordPress site for a stunning and more appealing web presence. Our work will ensure your WordPress platform is easy to use and memorable for the user.</p>
 
                                         </div>
                                         <div class="col-md-6 services-image">
@@ -602,7 +600,7 @@
             </div>
             <!-- Contact Area End -->
             <!-- Map Area Start -->
-            <div id="map"></div>
+            <!-- <div id="map"></div> -->
             <!-- Map Area End -->
           
             <!-- Footer Widgets End -->
